<resources>
    <string name="app_name">CardViewDesign</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="phone">Phone</string>
    <string name="movie">Movie</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="dashboard">Dashboard</string>
</resources>