<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:orientation="horizontal">

     <View
         android:id="@+id/top_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/bg_view"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dashboard"
         android:textColor="@color/white"
         android:layout_centerInParent="true"
         android:textSize="30sp"
         android:textStyle="bold"/>
  </RelativeLayout>


   <GridLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:columnCount="2"
       android:rowCount="3"
       android:alignmentMode="alignMargins"
       android:columnOrderPreserved="false"
       android:useDefaultMargins="true">

   <androidx.cardview.widget.CardView
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:cardCornerRadius="15dp"
       app:cardMaxElevation="12dp"
       android:layout_rowWeight="1"
       android:layout_columnWeight="1"
       android:layout_margin="12dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">

         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:src="@drawable/home"
             android:contentDescription="@string/todo" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/home"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
             android:textSize="18sp"
             android:textColor="@color/black" />

      </LinearLayout>

   </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:cardCornerRadius="15dp"
       app:cardMaxElevation="12dp"
       android:layout_rowWeight="1"
       android:layout_columnWeight="1"
       android:layout_margin="12dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">

         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:src="@drawable/baseline_settings_24"
             android:contentDescription="@string/todo" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
             android:textSize="18sp"
             android:textColor="@color/black" />

      </LinearLayout>

   </androidx.cardview.widget.CardView>



      <androidx.cardview.widget.CardView
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:cardCornerRadius="15dp"
          app:cardMaxElevation="12dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          android:layout_margin="12dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_search_24"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/black" />

         </LinearLayout>

      </androidx.cardview.widget.CardView>



      <androidx.cardview.widget.CardView
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:cardCornerRadius="15dp"
          app:cardMaxElevation="12dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          android:layout_margin="12dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_phone_24"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/black" />

         </LinearLayout>

      </androidx.cardview.widget.CardView>



      <androidx.cardview.widget.CardView
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:cardCornerRadius="15dp"
          app:cardMaxElevation="12dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          android:layout_margin="12dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_movie_24"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/black" />

         </LinearLayout>

      </androidx.cardview.widget.CardView>



      <androidx.cardview.widget.CardView
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:cardCornerRadius="15dp"
          app:cardMaxElevation="12dp"
          android:layout_rowWeight="1"
          android:layout_columnWeight="1"
          android:layout_margin="12dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_logout_24"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/black" />

         </LinearLayout>

      </androidx.cardview.widget.CardView>

   </GridLayout>


</LinearLayout>